--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,4 +1,4 @@
-name: \U0001F41B Bug Report
+name: 🐛 Bug Report
 description: Report unexpected behavior with stancl/tenancy.
 body:
   - type: textarea
