--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,7 +1,7 @@
 name: 🐛 Bug Report
 description: Report unexpected behavior with stancl/tenancy.
 labels: [bug]
-assignees: stancl
+assignees: [abrardev99]
 body:
   - type: textarea
     id: bug-description
