--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -2,7 +2,7 @@ name: 🐛 Bug Report
 description: Report unexpected behavior with stancl/tenancy.
 labels: ["bug"]
 assignees:
-  - stancl
+  - abrardev99
 body:
   - type: textarea
     id: bug-description
