--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -4,6 +4,12 @@ labels: ["bug"]
 assignees:
   - abrardev99
 body:
+  - type: markdown
+    attributes:
+      value: |
+        Before opening a bug report, please search for the behaviour in the existing issues.
+        ---
+        Thank you for taking the time to file a bug report. To address this bug as fast as possible, we need some information.
   - type: textarea
     id: bug-description
     attributes:
@@ -22,6 +28,7 @@ body:
       description: A clear and concise description of what you expected to happen.
     validations:
       required: true
+
   - type: input
     id: laravel-version
     attributes:
