--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -32,14 +32,14 @@ body:
   - type: input
     id: laravel-version
     attributes:
-      label: Laravel Version
+      label: Laravel version
       placeholder: "e.g. 8.2.0"
     validations:
       required: true
   - type: input
     id: tenancy-version
     attributes:
-      label: stancl/tenancy Version
+      label: stancl/tenancy version
       placeholder: "e.g. 3.1.0"
     validations:
       required: true
