--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -2,7 +2,7 @@ name: 🐛 Bug Report
 description: Report unexpected behavior with stancl/tenancy.
 labels: ["bug"]
 assignees:
-  - abrardev99
+  - stancl
 body:
   - type: markdown
     attributes:
