--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -21,6 +21,8 @@ body:
     id: steps
     attributes:
       label: Steps to reproduce
+    validations:
+      required: true
   - type: textarea
     id: logs
     attributes:
